# psyc-rust

./: .gitignore  Cargo.toml  plan.md  review_advices.md
.superpowers/sdd/: task-2-report.md
crates/e2v-api/: Cargo.toml
crates/e2v-api/include/: e2v_api.h
crates/e2v-api/src/: c_abi.rs  lib.rs
crates/e2v-api/tests/: c_abi_contract.rs  ffi_smoke.c  sdk_contract.rs
crates/e2v-cli/: Cargo.toml
crates/e2v-cli/src/: lib.rs  main.rs  remote_registry.rs
crates/e2v-cli/tests/: cli.rs
crates/e2v-core/: Cargo.toml
crates/e2v-core/src/: chunker.rs  facade.rs  keyring.rs  lib.rs  local_index.rs  manifest_store.rs  working_tree.rs
crates/e2v-core/tests/: branch_writeback.rs  init_repository.rs
crates/e2v-gui/: Cargo.toml
crates/e2v-gui/src/: app.rs  domain.rs  jobs.rs  lib.rs  main.rs  testing.rs
crates/e2v-gui/src/pages/: branches.rs  history.rs  home.rs  overview.rs  preview.rs  search.rs  sharing.rs  sync.rs  workbench.rs
crates/e2v-gui/src/services/: host_shell_service.rs  mod.rs  preview_service.rs  registry_store.rs  repository_service.rs  search_service.rs  sharing_service.rs
crates/e2v-gui/src/widgets/: confirmation_sheet.rs  home_screen.rs  job_drawer.rs  status_badge.rs  workbench_shell.rs
crates/e2v-gui/tests/: history_branches.rs  home.rs  overview.rs  preview.rs  registry.rs  render_shell.rs  search.rs  sharing.rs  smoke.rs  sync.rs
crates/e2v-store/: Cargo.toml
crates/e2v-store/src/: capability.rs  layout.rs  layout_root_store.rs  lib.rs  local_backend.rs  logical_object_store.rs  memory_backend.rs  oblivious_layout.rs  opendal_backend.rs  ref_store.rs  remote_telemetry.rs  storage_layout.rs
crates/e2v-sync/: Cargo.toml
crates/e2v-sync/src/: bundle.rs  clone.rs  fetch.rs  journal.rs  lib.rs  object_type.rs  oram.rs  pack.rs  pack_cache.rs  pack_index.rs  publisher.rs  push.rs  remote_diagnostics.rs  remote_maintenance.rs  remote_markers.rs  remote_spec.rs  transaction.rs  trusted_state.rs  web.rs
crates/e2v-sync/tests/: fetch_clone.rs  p1_c_pack_bench.rs  push_remote.rs  remote_diagnostics.rs  remote_maintenance.rs  remote_spec.rs  web_api.rs  web_ui.rs
crates/e2v-vfs/: Cargo.toml
crates/e2v-vfs/src/: lib.rs  platform.rs  windows.rs
crates/e2v-vfs/tests/: read_only_core.rs
docs/: psyc-rust-user-manual.en.md  psyc-rust-user-manual.zh-CN.md
docs/superpowers/plans/: 2026-06-22-p0-b-single-remote-sync.md  2026-06-22-p0-c-local-web.md  2026-06-23-p1-a-branches-local-index.md  2026-06-24-p1-c-packfile-performance.md  2026-06-25-p2-a-readonly-vfs.md  2026-06-30-p2-b-multi-device-sharing.md  2026-07-01-p2-c-sdk-api-stabilization.md  2026-07-01-p2-d-c-abi.md  2026-07-03-p3-a-historical-strong-revocation.md  2026-07-03-p3-b-access-pattern-hiding.md  2026-07-03-p3-c-writable-vfs.md  2026-07-04-alist-and-single-writer-push.md  2026-07-05-iced-gui-workbench-phase-1.md  2026-07-05-iced-gui-workbench-phase-2.md  2026-07-05-small-push-latency.md
docs/superpowers/specs/: 2026-06-22-p0-c-local-web-design.md  2026-06-24-p1-c-packfile-performance-design.md  2026-06-25-p2-a-readonly-vfs-design.md  2026-06-30-p2-b-multi-device-sharing-design.md  2026-07-01-p2-c-sdk-api-stabilization-design.md  2026-07-01-p2-d-c-abi-design.md  2026-07-03-p3-b-access-pattern-hiding-design.md  2026-07-03-p3-c-writable-vfs-design.md  2026-07-04-alist-and-single-writer-push-design.md  2026-07-05-iced-gui-workbench-design.md  2026-07-05-small-push-latency-design.md
