[package]
name = "e2v-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
e2v-core = { path = "../e2v-core" }
e2v-sync = { path = "../e2v-sync" }
e2v-store = { path = "../e2v-store" }

[dev-dependencies]
tempfile.workspace = true
