[package]
name = "e2v-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
fastcdc.workspace = true
getrandom.workspace = true
hex.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
unicode-normalization = "0.1"
e2v-store = { path = "../e2v-store" }

[dev-dependencies]
tempfile.workspace = true
