[package]
name = "e2v-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
iced = { version = "0.14", default-features = false, features = ["tiny-skia", "tokio"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
