[package]
name = "e2v-store"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
getrandom = "0.3"
opendal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
